Fix grid layout issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,29 +53,25 @@ ds-persona {
   padding: 10px 15px;
 }
 
-#langs {
+#grid-langs {
   grid-area: langs;
-  display: grid;
-  grid-template-columns: repeat(5, auto);
-  padding: 5px;
-  gap: 5%;
-  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 
-#langs ds-svg-wrap {
-  place-self: center;
-}
-
-#tools {
+#grid-tools {
   grid-area: tools;
+  height: 100%;
+  overflow: hidden;
+}
+
+#langs, #tools {
   display: grid;
   grid-template-columns: repeat(5, auto);
-  grid-auto-rows: min-content;
-  gap: 5%;
+  padding: 10px;
+  gap: 3%;
   width: 100%;
-  padding: 5px;
-  overflow: hidden;
+  height: min-content;
 }
 
 #tools ds-svg-wrap {
